2007-10-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* menu-bar.el (global-buffers-menu-map): New var.
	(global-map, menu-bar-update-buffers): Use it.

2007-10-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* hexl.el (hexl-menu): New major mode menu.

2007-10-20  Glenn Morris  <rgm@gnu.org>

	* progmodes/f90.el (f90-font-lock-keywords-2)
	(f90-looking-at-type-like): Fix regexp typos.

2007-10-19  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs-mode): Add mode name (accidentally left out
	in the 2007-10-16 change).

2007-10-19  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs--track-window-changes): Don't refresh the whole list.
	(bs-mode): Set mode-class property to special.

	* follow.el (follow-unload-function): New function.

	* loadhist.el (unload-function-features-list):
	Rename from `unload-hook-features-list'.
	(unload-hook-features-list): Add as obsolete alias.
	(unload-feature): Use `unload-function-features-list'
	and new FEATURE-unload-function.

2007-10-18  Juanma Barranquero  <lekktu@gmail.com>

	* loadhist.el (unload-feature-special-hooks):
	Update list of special hooks.

	* textmodes/fill.el (fill-individual-paragraphs): Doc fix.
	(adaptive-fill-function): Doc fix.  Remove * from docstring.

2007-10-18  Glenn Morris  <rgm@gnu.org>

	* ibuf-ext.el (ibuffer-saved-filter-groups): Doc fix.

2007-10-17  Aaron Hawley  <aaronh@garden.org>

	* tutorial.el (tutorial--save-tutorial): Display message when tutorial
	position is not saved.

2007-10-17  Chong Yidong  <cyd@stupidchicken.com>

	* longlines.el (longlines-wrap-follows-window-size): Integer value
	specifies wrapping margin.
	(longlines-mode, longlines-window-change-function):
	Set window-specific wrapping margin based on the above.

2007-10-17  John Wiegley  <johnw@newartisans.com>

	* eshell/esh-cmd.el (eshell-complex-commands): Add "ls".

2007-10-17  Glenn Morris  <rgm@gnu.org>

	* progmodes/cc-menus.el (cc-imenu-c++-generic-expression):
	Tweak regexp to avoid stack overflow.
